plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.vaadin' version '24.8.4'
}

group = 'com.ElihuAnalytics'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url = 'https://maven.vaadin.com/vaadin-addons'
    }
    maven {
        url = 'https://jitpack.io'
    }
    maven {
        url = 'https://maven.vaadin.com/vaadin-prereleases'
    }
}

ext {
    vaadinVersion = '24.8.4'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation enforcedPlatform('com.vaadin:vaadin-bom:24.8.4')
    implementation 'com.vaadin:vaadin-spring-boot-starter:24.8.4'
    implementation 'com.sendgrid:sendgrid-java:4.10.2'
    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
        exclude group: 'org.neo4j'
    }

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.2' // Añadido explícitamente
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.2' // Añadido explícitamente
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.2' // Actualizado a versión reciente
}

vaadin {
    productionMode = true
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('jar') {
    enabled = false
}